// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Menu di navigazione/Header/Nav NavHeader 1`] = `
<div>
  <div
    class="it-header-navbar-wrapper"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <nav
            class="navbar has-megamenu navbar navbar-expand-lg"
          >
            <div
              class=""
            >
              <button
                aria-controls="nav1"
                aria-expanded="false"
                aria-label="Toggle navigation"
                class="custom-navbar-toggler navbar-toggler"
                href="#"
                type="button"
              >
                <svg
                  class="icon"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M22 5v1H2V5h20zM2 12.5h20v-1H2v1zM2 19h20v-1H2v1z"
                  />
                </svg>
              </button>
              <div
                class="navbar-collapsable collapse navbar-collapsable"
                style="display: none;"
              >
                <div
                  class="overlay"
                  style="display: none;"
                />
                <div
                  class="close-div visually-hidden"
                >
                  <button
                    class="btn close-menu"
                    type="button"
                  >
                    <span
                      class="it-close"
                    />
                    close
                  </button>
                </div>
                <div
                  class="menu-wrapper"
                >
                  <ul
                    class="navbar-nav"
                  >
                    <li
                      class="nav-item active"
                    >
                      <a
                        class="nav-link active"
                        href="#"
                      >
                        <span>
                          link 1 active 
                        </span>
                        <span
                          class="visually-hidden"
                        >
                          current
                        </span>
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link disabled"
                        disabled=""
                        href="#"
                      >
                        Link 2
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 3
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 4
                      </a>
                    </li>
                    <li
                      class="dropdown nav-item"
                    >
                      <a
                        aria-haspopup="true"
                        class="dropdown-toggle nav-link"
                        data-bs-toggle="dropdown"
                        role="button"
                      >
                        <span>
                          Menu Dropdown
                        </span>
                        <svg
                          class="icon icon-expand icon-xs ms-1"
                          enable-background="new 0 0 24 24"
                          role="img"
                          viewBox="0 0 24 24"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            icon
                          </title>
                          <path
                            d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                          />
                        </svg>
                      </a>
                      <div
                        class="dropdown-menu"
                      >
                        <div
                          class="link-list-wrapper"
                        >
                          <ul
                            class="link-list"
                          >
                            <li>
                              <a
                                class="dropdown-item list-item"
                                href="#"
                                role="menuitem"
                                tabindex="0"
                              >
                                <span>
                                  Link list 1
                                </span>
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item list-item"
                                href="#"
                                role="menuitem"
                                tabindex="0"
                              >
                                <span>
                                  Link list 2
                                </span>
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item list-item"
                                href="#"
                                role="menuitem"
                                tabindex="0"
                              >
                                <span>
                                  Link list 3
                                </span>
                              </a>
                            </li>
                            <li>
                              <a
                                class="dropdown-item list-item"
                                href="#"
                                role="menuitem"
                                tabindex="0"
                              >
                                <span>
                                  Link list 4
                                </span>
                              </a>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </li>
                    <li
                      class="megamenu dropdown nav-item"
                    >
                      <a
                        aria-haspopup="true"
                        class="px-lg-2 px-xl-3 dropdown-toggle nav-link"
                        data-bs-toggle="dropdown"
                        role="button"
                      >
                        <span>
                          Megamenu con Immagine e Descrizione
                        </span>
                        <svg
                          class="icon icon-expand icon-xs ms-1"
                          enable-background="new 0 0 24 24"
                          role="img"
                          viewBox="0 0 24 24"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <title>
                            icon
                          </title>
                          <path
                            d="M11.6 15.4 6 9.8l.7-.8 4.9 4.9L16.5 9l.7.8z"
                          />
                        </svg>
                      </a>
                      <div
                        class="dropdown-menu"
                      >
                        <div
                          class="megamenu pb-5 pt-3 py-lg-0"
                        >
                          <div
                            class="row"
                          >
                            <div
                              class="col-12 col-lg-4"
                            >
                              <div
                                class="max-height-col row"
                              >
                                <div
                                  class="it-vertical it-description col"
                                >
                                  <div
                                    class="description-content"
                                  >
                                    <div
                                      class="ratio ratio-21x9 lightgrey-bg-a1 mb-4 rounded"
                                    >
                                      <figure
                                        class="figure"
                                      >
                                        <img
                                          alt="Segnaposto"
                                          class="figure-img img-fluid rounded"
                                          src="https://via.placeholder.com/560x240/ebebeb/808080/?text=Immagine"
                                        />
                                      </figure>
                                    </div>
                                    <p>
                                      Omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="col-12 col-lg-8"
                            >
                              <div
                                class="it-heading-link-wrapper"
                              >
                                <a
                                  class="it-heading-link"
                                  href="#"
                                >
                                  <svg
                                    class="icon icon icon-sm me-2 mb-1"
                                    enable-background="new 0 0 24 24"
                                    role="img"
                                    viewBox="0 0 24 24"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <title>
                                      icon
                                    </title>
                                    <path
                                      d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                    />
                                  </svg>
                                  <span>
                                    Esplora la sezione megamenu
                                  </span>
                                </a>
                              </div>
                              <div
                                class="row"
                              >
                                <div
                                  class="col-12 col-lg-6"
                                >
                                  <div
                                    class="link-list-wrapper"
                                  >
                                    <ul
                                      class="link-list"
                                    >
                                      <li>
                                        <a
                                          class="dropdown-item list-item"
                                          href="#"
                                          role="menuitem"
                                          tabindex="0"
                                        >
                                          <svg
                                            class="icon me-2 icon-primary icon-xs"
                                            enable-background="new 0 0 24 24"
                                            role="img"
                                            viewBox="0 0 24 24"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <title>
                                              icon
                                            </title>
                                            <path
                                              d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                            />
                                          </svg>
                                          <span>
                                            Link lista 1
                                          </span>
                                        </a>
                                      </li>
                                      <li>
                                        <a
                                          class="dropdown-item list-item"
                                          href="#"
                                          role="menuitem"
                                          tabindex="0"
                                        >
                                          <svg
                                            class="icon me-2 icon-primary icon-xs"
                                            enable-background="new 0 0 24 24"
                                            role="img"
                                            viewBox="0 0 24 24"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <title>
                                              icon
                                            </title>
                                            <path
                                              d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                            />
                                          </svg>
                                          <span>
                                            Link lista 2
                                          </span>
                                        </a>
                                      </li>
                                      <li>
                                        <a
                                          class="dropdown-item list-item"
                                          href="#"
                                          role="menuitem"
                                          tabindex="0"
                                        >
                                          <svg
                                            class="icon me-2 icon-primary icon-xs"
                                            enable-background="new 0 0 24 24"
                                            role="img"
                                            viewBox="0 0 24 24"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <title>
                                              icon
                                            </title>
                                            <path
                                              d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                            />
                                          </svg>
                                          <span>
                                            Link lista 3
                                          </span>
                                        </a>
                                      </li>
                                    </ul>
                                  </div>
                                </div>
                                <div
                                  class="col-12 col-lg-6"
                                >
                                  <div
                                    class="link-list-wrapper"
                                  >
                                    <ul
                                      class="link-list"
                                    >
                                      <li>
                                        <a
                                          class="dropdown-item list-item"
                                          href="#"
                                          role="menuitem"
                                          tabindex="0"
                                        >
                                          <svg
                                            class="icon me-2 icon-primary icon-xs"
                                            enable-background="new 0 0 24 24"
                                            role="img"
                                            viewBox="0 0 24 24"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <title>
                                              icon
                                            </title>
                                            <path
                                              d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                            />
                                          </svg>
                                          <span>
                                            Link lista 4
                                          </span>
                                        </a>
                                      </li>
                                      <li>
                                        <a
                                          class="dropdown-item list-item"
                                          href="#"
                                          role="menuitem"
                                          tabindex="0"
                                        >
                                          <svg
                                            class="icon me-2 icon-primary icon-xs"
                                            enable-background="new 0 0 24 24"
                                            role="img"
                                            viewBox="0 0 24 24"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <title>
                                              icon
                                            </title>
                                            <path
                                              d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                            />
                                          </svg>
                                          <span>
                                            Link lista 5
                                          </span>
                                        </a>
                                      </li>
                                      <li>
                                        <a
                                          class="dropdown-item list-item"
                                          href="#"
                                          role="menuitem"
                                          tabindex="0"
                                        >
                                          <svg
                                            class="icon me-2 icon-primary icon-xs"
                                            enable-background="new 0 0 24 24"
                                            role="img"
                                            viewBox="0 0 24 24"
                                            xml:space="preserve"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <title>
                                              icon
                                            </title>
                                            <path
                                              d="M12 14.8V9.2c0-.6.5-1 1-1 .3 0 .5.1.7.3l3.5 3.5-3.5 3.5c-.4.4-1 .4-1.4 0-.2-.2-.3-.4-.3-.7z"
                                            />
                                          </svg>
                                          <span>
                                            Link lista 6
                                          </span>
                                        </a>
                                      </li>
                                    </ul>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Header/Nav NavHeaderSecondary 1`] = `
<div>
  <div
    class="it-header-navbar-wrapper"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <nav
            class="navbar has-megamenu navbar navbar-expand-lg"
          >
            <div
              class=""
            >
              <button
                aria-controls="nav1"
                aria-expanded="false"
                aria-label="Toggle navigation"
                class="custom-navbar-toggler navbar-toggler"
                href="#"
                type="button"
              >
                <svg
                  class="icon"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="M22 5v1H2V5h20zM2 12.5h20v-1H2v1zM2 19h20v-1H2v1z"
                  />
                </svg>
              </button>
              <div
                class="navbar-collapsable collapse navbar-collapsable"
                style="display: none;"
              >
                <div
                  class="overlay"
                  style="display: none;"
                />
                <div
                  class="close-div visually-hidden"
                >
                  <button
                    class="btn close-menu"
                    type="button"
                  >
                    <span
                      class="it-close"
                    />
                    close
                  </button>
                </div>
                <div
                  class="menu-wrapper"
                >
                  <ul
                    class="navbar-nav"
                  >
                    <li
                      class="nav-item active"
                    >
                      <a
                        class="nav-link active"
                        href="#"
                      >
                        <span>
                          link 1 active 
                        </span>
                        <span
                          class="visually-hidden"
                        >
                          current
                        </span>
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 2
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 3
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 4
                      </a>
                    </li>
                  </ul>
                  <ul
                    class="navbar-secondary navbar-nav"
                  >
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 5
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 6
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 7
                      </a>
                    </li>
                    <li
                      class="nav-item"
                    >
                      <a
                        class="nav-link"
                        href="#"
                      >
                        Link 8
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;
